# fastcodedog

./: README.md  README_zh.md  pyproject.toml  requirements.txt
docs/: setting.json5  设计说明.docx
docs/prepare/crud/: query.checkout.json5  query.menu.json5  query.order.json5  query.organization.json5  query.role.json5  query.sample.json5  query.sample_param.json5  query.task.json5  query.user.json5
docs/prepare/model/: additional_foreign_keys.json5  disable_relationships.json5  specified_class_names.json5  specified_relatioship_names.json5
docs/prepare/schema/: alias_generator.json5  default_values.json5  no_input_fields.json5  no_response_fields.json5  response_schema.checkout.json5  response_schema.menu.json5  response_schema.order.json5  response_schema.organization.json5  response_schema.role.json5  response_schema.sample.json5  response_schema.task.json5  response_schema.user.json5
fastcodedog/: cli.py
fastcodedog/common/: source_file_path.py  write_file.py
fastcodedog/context/: context.py  contextbase.py
fastcodedog/context/api/: api.py  endpoint.py  oauth2.py  param.py
fastcodedog/context/common/: get_context_object.py  get_relationship.py  import_.py
fastcodedog/context/crud/: column.py  crud.py  join_relationship.py  query.py
fastcodedog/util/: case_converter.py  deep_update.py  extractor.py  find_file.py  indent.py  inflect_wrapper.py  make_dirs.py  singleton.py  type_converter.py  valid_name.py  wrap_str_with_quotation.py
test/: test_generate_all.py  test_prepare_all.py
test/genenration/: required_import.py
(+77 files in other folders)
